cargo-features = ["named-profiles"]

[package]
name = "cas"
version = "0.1.0"
authors = ["Anton Danilkin <afdw@yandex.ru>"]
edition = "2018"

[profile.dev-fast]
inherits = "dev"
debug = false

[dependencies]
uuid = { version = "0.8.1", features = ["v4"] }
itertools = "0.9.0"
indexmap = "1.6.0"
serde_json = { version = "1.0.59", features = ["preserve_order"] }
cairo-rs = {version = "0.9.1", features = ["v1_16"]}
gio = {version = "0.9.1", features = ["v2_64"]}
gdk = "0.13.2"
gtk = {version = "0.9.2", features = ["v3_16"]}
#glib = "0.10.3"
